@@ -41,9 +41,7 @@ import com.oracle.truffle.api.nodes.RepeatingNode;
 import java.io.StringWriter;
 import java.util.Arrays;
 import java.util.Comparator;
-import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Module where most of the LKQL built-in functions are declared. General purpose built-in functions
@@ -194,11 +192,12 @@ public class BuiltInFunctions {
                 writer.write("^^^^^^^^^^^^^^^^^\n");
                 writer.write("\n");
 
-                List<BuiltInFunctionValue> sortedBuiltinFunctions = AllBuiltIns.allFunctions()
+                for (var p : AllBuiltIns.functions()
+                    .values()
                     .stream()
-                    .sorted((l, r) -> l.getExecutableName().compareTo(r.getExecutableName()))
-                    .collect(Collectors.toList());
-                for (var func : sortedBuiltinFunctions) {
+                    .sorted(Comparator.comparing(f -> f.getRight().getExecutableName()))
+                    .toList()) {
+                    var func = p.getRight();
                     writer.write(".. function:: ");
                     writer.write(func.getExecutableName());
                     writer.write("(" + String.join(", ", func.parameterNames) + ")");
